# Fastapi-news

./: README.md  docker-compose.yml  my-custom.cnf
FastApi-news/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
FastApi-news/cache/: news.py
FastApi-news/config/: db_conf.py  redis_conf.py
FastApi-news/crud/: favorite.py  history.py  news.py  users.py
FastApi-news/models/: news.py  users.py
FastApi-news/routers/: favorite.py  history.py  news.py  users.py
FastApi-news/schemas/: base.py  favorite.py  history.py  users.py
FastApi-news/utils/: auth.py  exception.py  exception_handlers.py  response.py  security.py
mysql/: Dockerfile  init.sql  my.cnf
xwzx-news/: Dockerfile
xwzx-news/src/config/: api.js
