[project]
name = "fastapi-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql==0.3.2",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "charset-normalizer==3.4.9",
    "cryptography==49.0.0",
    "detect-installer==0.1.0",
    "docopt==0.6.2",
    "fastapi==0.136.3",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.20.0",
    "fastar==0.11.0",
    "greenlet==3.5.1",
    "httptools==0.8.0",
    "itsdangerous==2.2.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "passlib==1.7.4",
    "pipreqs==0.4.13",
    "pycparser==3.0",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pymysql==1.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "redis==8.0.1",
    "requests==2.34.2",
    "rich-toolkit==0.20.1",
    "rignore==0.7.6",
    "sentry-sdk==2.62.0",
    "setuptools==82.0.1",
    "sqlalchemy==2.0.50",
    "starlette==1.3.0",
    "typer==0.26.7",
    "urllib3==2.7.0",
    "uv==0.11.28",
    "uvicorn==0.49.0",
    "websockets==16.0",
    "wheel==0.46.3",
    "yarg==0.1.10",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true